# sales-traning-tool

./: AGENTS.md  LICENSE  Makefile  README.md  SPEC.md  deploy.sh  docker-compose.prod.yml  docker-compose.yml
backend/: .env.example  alembic.ini  docker-entrypoint.sh  pyproject.toml  requirements-dev.txt  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 50e3e382e668_initial_schema.py
backend/app/: __init__.py  config.py  main.py
backend/app/agents/: __init__.py  base.py  coach.py  director.py  evaluator.py  memory.py  npc.py  orchestrator.py  safety.py
backend/app/api/: deps.py
backend/app/core/: __init__.py  cache.py  exceptions.py  middleware.py  rate_limiter.py  security.py  token_blacklist.py
backend/app/db/: __init__.py  base.py  session.py
backend/app/models/: __init__.py  community.py  coupon.py  course.py  dashboard.py  friendship.py  incentive.py  membership.py  notification.py  order.py  plaza.py  points.py  redeem_code.py  report.py  scenario.py  scenario_social.py  security.py  session.py  settings.py  social.py  system_config.py  training_plan.py  user.py
backend/app/schemas/: __init__.py  coupon.py  order.py  payment.py  points.py  redeem_code.py  report.py  scenario.py  session.py  tmp_schema_update.py  training.py  user.py  vip.py
backend/app/services/: coupon_service.py  dashboard_service.py  incentive_service.py  notification_service.py  sms_service.py  (+15 more)
backend/scripts/: create_tables.py  init_admin.py  migrate.py  seed_all.py  seed_data.py  seed_scenarios.py  seed_scenarios_full.py  update_official_scenarios.py
(+158 files in other folders)
